--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
     <h1 class="site-title">Xmas Dream</h1>
       <p class="site-description">
         withID株式会社による<br>
-        VRコンテンツ「Xmas Dream」特設サイト
+        VRコンテンツ「Xmas Dream」の特設PRサイト
       </p>
     <div class="buttons">
       <a class="button button-ghost to-profile" href="#introduction">Introduction</a>
-      <a class="button button-ghost to-contact" href="#about">About us</a>
+      <a class="button button-ghost to-contact" href="#contact">Contact</a>
     </div>
     <div class="pleaseScroll">Scroll</div>
   </header>
@@ -71,24 +71,47 @@
 <!-- プロフィールセクション -->
   <section class="first-section" id="introduction">
 
-      <h2 class="heading">PROFILE</h2>
+      <p class="site-title-sub h2">Introduction</p>
 
       <p class="description">
-        Kiro Futaya<br>
-        1995年10月24日生まれ<br>
-        東京大学工学部卒<br>
-        東京大学大学院工学系研究科<br>
-        社会基盤学専攻修士過程<br>
-        はじめまして。<br>
-        趣味でコードを書いています。<br>
-        趣味の多い生涯を送ってきました。<br>
-        例えば、手品フリークです。<br>
-        例えば、1年間世界中を飛び回っていました。<br>
-        例えば、詩を書いています。<br>
-        例えば、密かに小説家を目指しています。<br>
+        灰白色の空と、色とりどりの光で溢れた街角。<br class="br-pc">
+        ジャズ調にアレンジされた懐かしいメロディ。<br class="br-pc">
+        厚手のコートを着た人々の足取りは、どこか浮き足立っている。<br>
+        今年ももうクリスマスの時期だ。<br>
         <br>
-        僕の好きが詰まったものが、<br>
-        誰かの心に届いたと感じる瞬間が幸せです。<br>
+        この国の多くの人々にとって、<br class="br-pc">
+        本来他所の行事であるはずのそれは、<br class="br-pc">
+        言ってみれば「フィクション」であるはずなのに、<br class="br-pc">
+        私たちは毎年毎年、誰かと過ごすクリスマスを想い、<br class="br-pc">
+        あるいは誰かと過ごせないクリスマスを想い、<br class="br-pc">
+        よろこび、かなしんでいる。<br>
+        その気持ちはきっと「フィクション」では無いはずだ。<br>
+        <br>
+        私たちwithID株式会社は現在、<br class="br-pc">
+        ゲームでもSNSでもないVR動画コンテンツを作成しています。<br>
+        仮想現実というネーミングの名の通り、<br class="br-pc">
+        VRは「フィクション」です。<br>
+        しかし私たちは、その先に生まれる豊かな感情を大切にしたい。<br>
+        なぜなら私たちは、<br class="br-pc">
+        そうした感情を大切にすることが、<br class="br-pc">
+        しあわせの大きな源になると考えているからです。<br>
+        <br>
+        今日、私たちは「Xmas Dream」をリリースします。<br>
+        あなたに豊かな感情をプレゼントできるといいのですが…。
+      </p>
+
+  </section>
+
+  <section class="second-section">
+
+      <p class="site-title-sub h2">How to Watch</p>
+      <div class="video">
+      <iframe src="https://www.youtube.com/embed/oXsgB7r8wsU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
+      <p class="description">
+        OculusやVIVEなどのHMDで観られる方は、<br class="br-pc">
+        YoutubeVRにて、〇〇と検索してください。<br>
       </p>
 
   </section>
@@ -99,7 +122,15 @@
 
 <!-- フッター -->
   <footer class="footer">
-    © KIRO FUTAYA 2019
+    <section>
+    <h2 id="contact">Contact</h2>
+    <p class="description">
+      ご意見ご感想、その他お問い合わせ等は<br>
+      お気軽に info@withid.jp までお寄せください。
+    </p>
+    <a class="button button-ghost" href="https://withid.jp/">More about withID</a>
+  </section>
+    <p>2019  © withID, inc.</p>
   </footer>
   <script src="lib/placeholders.min.js"></script>
 
