--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <!-- プロフィールセクション -->
   <section class="first-section" id="introduction">
 
-      <p class="site-title-sub h2">Introduction</p>
+      <p class="site-title-sub h2">Merry Christmas</p>
 
       <p class="description">
         灰白色の空と、色とりどりの光で溢れた街角。<br class="br-pc">
@@ -80,12 +80,12 @@
         今年ももうクリスマスの時期だ。<br>
         <br>
         この国の多くの人々にとって、<br class="br-pc">
-        本来他所の行事であるはずのそれは、<br class="br-pc">
+        本来関係の無い行事であるそれは、<br class="br-pc">
         言ってみれば「フィクション」であるはずなのに、<br class="br-pc">
         私たちは毎年毎年、誰かと過ごすクリスマスを想い、<br class="br-pc">
         あるいは誰かと過ごせないクリスマスを想い、<br class="br-pc">
         よろこび、かなしんでいる。<br>
-        その気持ちはきっと「フィクション」では無いはずだ。<br>
+        その気持ちはきっと「フィクション」ではないはずだ。<br>
         <br>
         私たちwithID株式会社は現在、<br class="br-pc">
         ゲームでもSNSでもないVR動画コンテンツを作成しています。<br>
@@ -104,7 +104,7 @@
 
   <section class="second-section">
 
-      <p class="site-title-sub h2">How to Watch</p>
+      <p class="site-title-sub h2">Xmas Dream</p>
       <div class="video">
       <iframe src="https://www.youtube.com/embed/oXsgB7r8wsU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
