--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 <!-- ヘッダー -->
   <header class="header">
-    <p class="site-title-sub">withID's VR content</p>
+    <p class="site-title-sub">withID presents</p>
     <h1 class="site-title">Xmas Dream</h1>
       <p class="site-description">
         withID株式会社による<br>
