「ネーミングの名の通り」を修正

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://kirofutaya.github.io/withid_vr/" />
   <meta property="og:image" content="./images/ogp1200_630.jpg" />
-  <meta property="og:site_name" content="withID Inc." />
+  <meta property="og:site_name" content="withID, inc." />
   <meta property="og:description" content="withID株式会社によるVR動画「Xmas Dream」特設サイト" />
   <!-- OGP for Facebook -->
   <meta property="fb:app_id" content="702984360192378" />
@@ -89,7 +89,7 @@
         <br>
         私たちwithID株式会社は現在、<br class="br-pc">
         ゲームでもSNSでもないVR動画コンテンツを作成しています。<br>
-        仮想現実というネーミングの名の通り、<br class="br-pc">
+        仮想現実というネーミングの通り、<br class="br-pc">
         VRは「フィクション」です。<br>
         しかし私たちは、その先に生まれる豊かな感情を大切にしたい。<br>
         なぜなら私たちは、<br class="br-pc">
