--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
       <a class="button button-ghost to-profile" href="#introduction">Introduction</a>
       <a class="button button-ghost to-contact" href="#contact">Contact</a>
     </div>
+    <a class="to-profile scrollbutton" href="#introduction">
     <div class="pleaseScroll">Scroll</div>
+    </a>
   </header>
 
 <!-- プロフィールセクション -->
