--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <h1 class="site-title">Xmas Dream</h1>
       <p class="site-description">
         withID株式会社による<br>
-        VRコンテンツ「Xmas Dream」の特設PRサイト
+        VRショートムービー「Xmas Dream」の特設PRサイト
       </p>
     <div class="buttons">
       <a class="button button-ghost to-profile" href="#introduction">Introduction</a>
@@ -69,6 +69,7 @@
     <div class="pleaseScroll">Scroll</div>
     </a>
   </header>
+  <br><br><br>
 
 <!-- プロフィールセクション -->
   <section class="first-section" id="introduction">
@@ -76,13 +77,14 @@
       <p class="site-title-sub h2">Merry Christmas</p>
 
       <p class="description">
-        灰白色の空と、色とりどりの光で溢れた街角。<br class="br-pc">
-        ジャズ調にアレンジされた懐かしいメロディ。<br class="br-pc">
-        厚手のコートを着た人々の足取りは、どこか浮き足立っている。<br>
-        今年ももうクリスマスの時期だ。<br>
+        イルミネーションの光が、灰白色の空を明るく彩る。<br class="br-pc">
+        街に響く懐かしいメロディに、心がほっとする。<br class="br-pc">
+        街を行き交う人々の足取りが、<br class="br-pc">
+        どこか浮き足立っているように感じられるのは、気のせいだろうか。<br>
+        今年ももうクリスマスだ。<br>
         <br>
         この国の多くの人々にとって、<br class="br-pc">
-        本来関係の無い行事であるそれは、<br class="br-pc">
+        本来関係のなかった行事であるそれは、<br class="br-pc">
         言ってみれば「フィクション」であるはずなのに、<br class="br-pc">
         私たちは毎年毎年、誰かと過ごすクリスマスを想い、<br class="br-pc">
         あるいは誰かと過ごせないクリスマスを想い、<br class="br-pc">
@@ -90,16 +92,16 @@
         その気持ちはきっと「フィクション」ではないはずだ。<br>
         <br>
         私たちwithID株式会社は現在、<br class="br-pc">
-        ゲームでもSNSでもないVR動画コンテンツを作成しています。<br>
+        ゲームでもSNSでもないVRのショートムービーを作成しています。<br>
         仮想現実というネーミングの通り、<br class="br-pc">
         VRは「フィクション」です。<br>
-        しかし私たちは、その先に生まれる豊かな感情を大切にしたい。<br>
-        なぜなら私たちは、<br class="br-pc">
-        そうした感情を大切にすることが、<br class="br-pc">
-        しあわせの大きな源になると考えているからです。<br>
+        しかし私たちは「フィクション」だからこそ照らすことのできる、<br class="br-pc">
+        大切な心の動きがあるはずだと考えています。<br class="br-pc">
         <br>
         今日、私たちは「Xmas Dream」をリリースします。<br>
-        あなたに豊かな感情をプレゼントできるといいのですが…。
+        短い作品ではありますが、<br class="br-pc">
+        あの頃の童心を、まだ見ぬ景色への憧憬を、あるいは昔の出来事を、<br class="br-pc">
+        思い出して楽しんでいただけたらと思います。
       </p>
 
   </section>
@@ -107,14 +109,15 @@
   <section class="second-section">
 
       <p class="site-title-sub h2">Xmas Dream</p>
+      <p class="description">
+        「Xmas Dream」は、Youtube上で見られる、VRのショートムービーです。<br>
+        HMD等で見られる方は、YoutubeVRにて「withID」チャンネルからご覧いただくか、VR180の「Xmas Dream」を検索してください。<br>
+      </p>
       <div class="video">
       <iframe src="https://www.youtube.com/embed/iqEgXoVKLyg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
-      <p class="description">
-        OculusやVIVEなどのHMDで観られる方は、<br class="br-pc">
-        YoutubeVRにて、〇〇と検索してください。<br>
-      </p>
+
 
   </section>
 
