--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <h1 class="site-title">Xmas Dream</h1>
       <p class="site-description">
         withID株式会社による<br>
-        VRショートムービー「Xmas Dream」の特設PRサイト
+        VRショートムービー「Xmas Dream」特設サイト
       </p>
     <div class="buttons">
       <a class="button button-ghost to-profile" href="#introduction">Introduction</a>
@@ -91,17 +91,19 @@
         よろこび、かなしんでいる。<br>
         その気持ちはきっと「フィクション」ではないはずだ。<br>
         <br>
+        <br>
         私たちwithID株式会社は現在、<br class="br-pc">
         ゲームでもSNSでもないVRのショートムービーを作成しています。<br>
         仮想現実というネーミングの通り、<br class="br-pc">
-        VRは「フィクション」です。<br>
+        VRは「フィクション」です。<br class="br-pc">
         しかし私たちは「フィクション」だからこそ照らすことのできる、<br class="br-pc">
         大切な心の動きがあるはずだと考えています。<br class="br-pc">
+        <br>
         <br>
         今日、私たちは「Xmas Dream」をリリースします。<br>
         短い作品ではありますが、<br class="br-pc">
         あの頃の童心を、まだ見ぬ景色への憧憬を、あるいは昔の出来事を、<br class="br-pc">
-        思い出して楽しんでいただけたらと思います。
+        思い出して楽しんでいただけたら私たちにとってこれ以上ない喜びです。
       </p>
 
   </section>
