--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         イルミネーションの光が、灰白色の空を明るく彩る。<br class="br-pc">
         街に響く懐かしいメロディに、心がほっとする。<br class="br-pc">
         街を行き交う人々の足取りが、<br class="br-pc">
-        どこか浮き足立っているように感じられるのは、気のせいだろうか。<br>
+        どこか浮き足立って感じられるのは、気のせいだろうか。<br>
         今年ももうクリスマスだ。<br>
         <br>
         この国の多くの人々にとって、<br class="br-pc">
