--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <h1 class="site-title">Xmas Dream</h1>
       <p class="site-description">
         withID株式会社による<br>
-        VRショートムービー「Xmas Dream」特設サイト
+        VRショートムービー「Xmas Dream」PR
       </p>
     <div class="buttons">
       <a class="button button-ghost to-profile" href="#introduction">Introduction</a>
@@ -100,7 +100,7 @@
         大切な心の動きがあるはずだと考えています。<br class="br-pc">
         <br>
         <br>
-        今日、私たちは「Xmas Dream」をリリースします。<br>
+        私たちは「Xmas Dream」をリリースします。<br>
         短い作品ではありますが、<br class="br-pc">
         あの頃の童心を、まだ見ぬ景色への憧憬を、あるいは昔の出来事を、<br class="br-pc">
         思い出して楽しんでいただけたら私たちにとってこれ以上ない喜びです。
