--- a/index.html
+++ b/index.html
@@ -8,19 +8,17 @@
   <title>withID VR</title>
   <meta name="keywords" content="withid,vr,xmas,christmas,xmas dream,ウィズアイディー,with id">
   <!-- OGP -->
-  <meta property="fb:app_id" content="702984360192378" />
-  <meta property="og:title" content="XmasVR" />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://kirofutaya.github.io/withid_vr/" />
-  <meta property="og:image" content="https://kirofutaya.github.io/withid_vr/images/ogp1200_630.jpg" />
-  <meta property="og:site_name" content="withID, inc." />
+  <meta property="fb:app_id" content="702984360192378">
+  <meta property="og:title" content="Xmas Dream">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://kirofutaya.github.io/withid_vr/">
+  <meta property="og:image" content="https://kirofutaya.github.io/withid_vr/images/ogp1200_630.jpg">
+  <meta property="og:site_name" content="withID, inc.">
   <meta property="og:description" content="withID株式会社によるVR動画「Xmas Dream」特設サイト" />
-  <!-- OGP for Facebook -->
-
   <!-- OGP for Twitter -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:site" content="@withID_" />
-  <meta name="twitter:player" content="@withID_" />
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@withID_">
+  <meta name="twitter:player" content="@withID_">
 
   <!-- favicon -->
   <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
