--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta property="og:title" content="Xmas Dream">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://kirofutaya.github.io/withid_vr/">
-  <meta property="og:image" content="https://kirofutaya.github.io/withid_vr/images/ogp1200_630.jpg">
+  <meta property="og:image" content="https://kirofutaya.github.io/withid_vr/images/ogp.jpg">
   <meta property="og:site_name" content="withID, inc.">
   <meta property="og:description" content="withID株式会社によるVR動画「Xmas Dream」特設サイト" />
   <!-- OGP for Twitter -->
