主に企業ロゴの追加

--- a/index.html
+++ b/index.html
@@ -51,7 +51,18 @@
 <div id="loading_body">
  <div id="loading">
   <p>LOADING</p>
-  <img src="./images/815.svg">
+  <!-- <img src="./images/815.svg"> -->
+  <div class="sk-cube-grid">
+  <div class="sk-cube sk-cube1"></div>
+  <div class="sk-cube sk-cube2"></div>
+  <div class="sk-cube sk-cube3"></div>
+  <div class="sk-cube sk-cube4"></div>
+  <div class="sk-cube sk-cube5"></div>
+  <div class="sk-cube sk-cube6"></div>
+  <div class="sk-cube sk-cube7"></div>
+  <div class="sk-cube sk-cube8"></div>
+  <div class="sk-cube sk-cube9"></div>
+</div>
  </div>
 </div>
 
@@ -64,7 +75,7 @@
         VRショートムービー「Xmas Dream」PR
       </p>
     <div class="buttons">
-      <a class="button button-ghost to-profile" href="#introduction">Introduction</a>
+      <a class="button button-ghost to-profile" href="#introduction">Message</a>
       <a class="button button-ghost to-contact" href="#contact">Contact</a>
     </div>
     <a class="to-profile scrollbutton" href="#introduction">
@@ -76,7 +87,7 @@
 <!-- プロフィールセクション -->
   <section class="first-section" id="introduction">
 
-      <p class="site-title-sub h2">Merry Christmas</p>
+      <p class="site-title-sub h2">Message</p>
 
       <p class="description">
         イルミネーションの光が、灰白色の空を明るく彩る。<br class="br-pc">
@@ -97,15 +108,15 @@
         私たちwithID株式会社は現在、<br class="br-pc">
         ゲームでもSNSでもないVRのショートムービーを作成しています。<br>
         仮想現実というネーミングの通り、<br class="br-pc">
-        VRは「フィクション」です。<br class="br-pc">
+        VRは「フィクション」かもしれません。<br class="br-pc">
         しかし私たちは「フィクション」だからこそ照らすことのできる、<br class="br-pc">
         大切な心の動きがあるはずだと考えています。<br class="br-pc">
         <br>
         <br>
-        私たちは「Xmas Dream」をリリースします。<br>
+        私たちの処女作「Xmas Dream」をあなたにお届けします。<br>
         短い作品ではありますが、<br class="br-pc">
         あの頃の童心を、まだ見ぬ景色への憧憬を、あるいは昔の出来事を、<br class="br-pc">
-        思い出して楽しんでいただけたら私たちにとってこれ以上ない喜びです。
+        思い出して楽しんでいただけたら私たちにとってこれ以上ない喜びです。<br>
       </p>
 
   </section>
@@ -114,14 +125,27 @@
 
       <p class="site-title-sub h2">Xmas Dream</p>
       <p class="description">
-        「Xmas Dream」は、Youtube上で見られる、VRのショートムービーです。<br>
-        HMD等で見られる方は、YoutubeVRにて「withID」チャンネルからご覧いただくか、VR180の「Xmas Dream」を検索してください。<br>
+        HMD等で見られる方は、YoutubeVRにて「withID」と検索してください。<br>
       </p>
       <div class="video">
-      <iframe src="https://www.youtube.com/embed/iqEgXoVKLyg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/l8JJA3FBb9U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
 
+
+  </section>
+
+  <section class="second-section">
+    <p class="site-title-sub h2">Supported by</p>
+    <br><br>
+
+    <div class="flex-support">
+
+    <img src="./images/gtune.png" class="f-item1">
+    <img src="./images/txs.png" class="f-item2">
+    <img src="https://d0.awsstatic.com/logos/powered-by-aws-white.png" alt="Powered by AWS Cloud Computing" class="f-item3">
+
+    </div>
 
   </section>
 
@@ -134,7 +158,7 @@
     <section>
     <h2 id="contact">Contact</h2>
     <p class="description">
-      ご意見ご感想、その他お問い合わせ等は<br>
+      ご意見ご感想の他、お仕事や採用等のお問い合わせは<br>
       お気軽に info@withid.jp までお寄せください。
     </p>
     <a class="button button-ghost" href="https://withid.jp/">More about withID</a>
