タイトルチェンジ

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- meta tag -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-  <title>withID VR</title>
+  <title>Xmas Dream</title>
   <meta name="keywords" content="withid,vr,xmas,christmas,xmas dream,ウィズアイディー,with id">
   <!-- OGP -->
   <meta property="fb:app_id" content="702984360192378">
