--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <br>
         私たちの処女作「Xmas Dream」をあなたにお届けします。<br>
         短い作品ではありますが、<br class="br-pc">
-        あの頃の童心を、まだ見ぬ景色への憧憬を、あるいは昔の出来事を、<br class="br-pc">
+        あの頃の童心を、まだ見ぬ景色への憧憬を、あるいは昔あった出来事を、<br class="br-pc">
         思い出して楽しんでいただけたら私たちにとってこれ以上ない喜びです。<br>
       </p>
 
